public class ImageView {
    javafx.scene.label.Label label;
    jav
}
