package com.pixelbit.command;

public interface ImageCommand {
   void execute();
   void undo();

}